# DiskSight

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.ts
articles/: README.md  design-and-implementation.md  frontend-architecture.md  performance-optimization.md  rust-parallel-processing.md  tauri-best-practices.md
src/: App.css  App.tsx  lib.rs  main.rs  main.tsx  models.rs
src-tauri/: .gitignore  Cargo.toml  README.md  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dir_listing.rs  dir_listing_v2.rs  lib.rs  main.rs  models.rs
src/components/: file-actions.tsx  settings-dialog.tsx
