[package]
name = "disk-sight"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.32.2"
egui = "0.32.2"
egui_extras = "0.32.2"
fs_extra = "1.3.0"
indicatif = "0.18.0"
rayon = "1.11.0"
rfd = "0.15.4"
